# XStitchLab

./: .gitignore  DEVELOPMENT.md  README.md  app.py  pyproject.toml  run-backend.sh  run-dev.sh  run-frontend.sh
backend/: pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/routes/: export.py  patterns.py
backend/app/schemas/: patterns.py
backend/app/services/: pattern_service.py
data/: dmc_colors.json
designs/01-three-brothers-riga/: design.json  design.md  pattern_sheet_a4.html  prompt.md
designs/02-holstentor-lubeck/: design.json  design.md  pattern_sheet_a4.html  prompt.md
designs/03-bryggen-bergen/: design.json  design.md  pattern_sheet_a4.html  prompt.md
designs/04-townhall-tallinn/: design.json  design.md  pattern_sheet_a4.html  prompt.md
designs/05-artus-gdansk/: design.json  design.md  pattern_sheet_a4.html
designs/_shared/: hanseatic_style_guide.md  kit-assembly.html  kit-designs.md  pattern_sheets_readme.md  thread-order.html
docs/: initial_brief.md  pattern-sheet.md  project_plan.md
docs/plans/: 2026-01-24-physical-kit-design.md  2026-03-03-xstitchlabs-website-design.md  2026-03-03-xstitchlabs-website.md
frontend/: index.html  package-lock.json  vite.config.js
frontend/src/: main.js
frontend/styles/: main.css
tests/: __init__.py  conftest.py  test_color_mapper.py  test_integration.py  test_pattern.py  test_pixelator.py  test_thread_calc.py
website/: index.html  package.json
xstitchlab/: __init__.py  cli.py
xstitchlab/core/: __init__.py  adjuster.py  ai_generator.py  backstitch.py  color_mapper.py  (+5 more)
(+36 files in other folders)
